src/main/webapp/content/scss/editor.scss
/*!* ==========================================================================
Code-Editor Layout Styles
========================================================================== *!*/

.editor-wrapper {
    display: grid;
    grid-template-rows: min-content auto auto;
    grid-row-gap: 10px;

    .collapsed--horizontal,
    .collapsed--vertical {
        flex: none !important;

        .card-header {
            height: 100%;
            width: 100%;
            > fa-icon {
                display: none;
            }
        }

        .card-body,
        .card-second-header {
            display: none !important;
        }

        .card-title span {
            display: none !important;
        }

        .card-footer span {
            display: none !important;
        }
    }
    .collapsed--horizontal {
        width: 75px !important;
    }
    .collapsed--vertical {
        height: 42px !important;
    }
}

.editor-statusbar {
    display: flex;
    align-items: center;
    border: 1px solid #e7e7e7;
    padding: 10px;

    &__title {
        color: #5e5e5e;
        font-size: 18px;
    }
}

.editor-main {
    display: flex;
    flex-flow: column nowrap;
    height: 500px;
    margin-bottom: 10px;

    &__content {
        display: flex;
        height: inherit;

        .editor-sidebar-left {
            flex: 0 1 auto;
            display: flex;
            width: 310px;
        }
    }

    .editor-center {
        flex: 1 1 auto;

        .card {
            height: 100%;
        }
    }
    .editor-sidebar-right {
        flex: 0 1 auto;
        display: flex;
        flex-flow: row nowrap;
        width: 500px;
    }
}

.editor-bottom {
    height: 200px;
    flex: 1 1 auto;
    display: flex;
    flex-flow: column nowrap;

    jhi-code-editor-build-output {
        height: inherit;
    }
}

/*!* ==========================================================================
Resizable drag elements
========================================================================== *!*/

.rg-main-bottom,
.rg-bottom-bottom,
.rg-sidebar-left,
.rg-sidebar-right {
    align-self: center;
}

.rg-main-bottom {
    cursor: row-resize;
}

.rg-sidebar-left,
.rg-sidebar-right {
    cursor: col-resize;
    margin-left: 4px;
    margin-right: 4px;
}

/*!* ==========================================================================
File browser
========================================================================== *!*/

jhi-code-editor-file-browser {
    flex: 1 1 auto;

    .file-browser {
        height: 100%;

        .card-body {
            overflow: auto;
            padding: 1rem 0.5rem 1rem 0.5rem;
        }

        .card-second-header {
            display: flex;
            background-color: #f5f5f5;
            border-bottom: 1px solid #ddd;

            button {
                width: 60px;
            }
        }
    }
}

/*!* ==========================================================================
File browser tree
========================================================================== *!*/

.treeview-container {
    overflow-y: hidden !important;

    .treeview-item {
        .list-group-item {
            padding: 0.3rem 0.5rem 0.3rem 1.25rem;
            margin-bottom: 2px;
            border: none;
            display: flex;

            &--folder {
                padding-left: 0.3rem;
            }

            &__fileName {
                cursor: pointer;
                overflow: hidden;
                text-overflow: ellipsis;
            }

            &__input {
                border: none;
                padding-left: 5px;
            }
        }

        .list-group-item:hover {
            background-color: #f5f5f5;
        }

        .list-group-item:hover .file-icons {
            opacity: 1;
        }
    }

    .node-selected {
        background-color: #428bca !important;
    }

    .file-icons {
        opacity: 0;
        transition: all 100ms ease-in-out;
        margin-left: auto;
        :not(:last-child) {
            margin-right: 5px;
        }
        button {
            padding: 0;
            fa-icon {
                cursor: pointer;
            }
        }
    }
}

/*!* ==========================================================================
Instructions
========================================================================== *!*/

jhi-code-editor-instructions {
    display: flex;
    flex-flow: column nowrap;
    flex: 1 1 auto;
    height: inherit;

    .instructions {
        display: flex;
        flex-flow: column nowrap;
        flex: 1 1 auto;
        height: 100%;

        .editable-instruction-container,
        jhi-markdown-editor,
        .markdown-editor-wrapper,
        .tab-content,
        .tab-content > .active,
        jhi-programming-exercise-instructions,
        .markdown-editor {
            display: flex;
            flex-flow: column nowrap;
            flex: 1 1 auto;
            height: inherit;
        }

        .markdown-editor__content {
            flex: 1 1 auto;
        }

        &__content {
            display: flex;
            flex-flow: column nowrap;
            flex: 1 1 auto;
            height: inherit;

            .card-second-header {
                padding: 10px 15px;
                background-color: #f5f5f5;
                border-bottom: 1px solid #ddd;
            }

            &__markdown {
                height: inherit;
                overflow: auto;
                padding: 1.25rem;
            }
        }
    }

    .nav.nav-tabs {
        background-color: #f5f5f5;
    }
}

/*!* ==========================================================================
Ace Editor
========================================================================== *!*/

.code-editor-ace {
    flex: 1 1 auto;
    height: 100%;
    &__content {
        padding: 0;
        &__editor {
            height: 100%;
        }
    }
}

/*!* ==========================================================================
Instructions stepwizard
========================================================================== *!*/

.stepwizard-step p {
    margin-top: 10px;
}

.stepwizard-step .fa {
    vertical-align: initial;
}

.stepwizard-row {
    display: table-row;
}

.stepwizard {
    display: table;
    width: 100%;
    position: relative;
}

.stepwizard-step button[disabled] {
    opacity: 1 !important;
    filter: alpha(opacity=100) !important;
    cursor: default;
}

.stepwizard-step .btn {
    cursor: default;
}

.stepwizard-row:before {
    top: 14px;
    bottom: 0;
    position: absolute;
    content: ' ';
    width: 100%;
    height: 1px;
    background-color: #ccc;
    z-order: 0;
}

.stepwizard-step {
    display: table-cell;
    text-align: center;
    position: relative;

    &--no-result.btn {
        cursor: default;
    }

    &--failed.btn {
        cursor: pointer;
    }
}

.btn-circle.btn-circle {
    width: 30px;
    height: 30px;
    text-align: center;
    padding: 6px 0;
    font-size: 12px;
    line-height: 1.428571429;
    border-radius: 15px;
    &.btn-light {
        border-color: #ccc;
    }
}

.test-passing {
    cursor: default !important;
}

.test-passing:hover {
    background-color: #f8f9fa;
}

/*!* ==========================================================================
Build-output
========================================================================== *!*/

.build-output {
    height: inherit;

    &__content {
        font-family: Menlo, Monaco, 'Courier New', monospace;
        font-size: 11px;
        overflow: auto;
        margin: 0;

        &__entry {
            &-date {
                width: 130px;
                margin-right: 10px;
                color: #505050;
                font-weight: normal;
                float: left;
                clear: left;
            }
            &-text {
                margin-bottom: 0;
                color: #003366;
            }
        }
    }
}

/*!* ==========================================================================
Code-Editor-Status
========================================================================== *!*/

.code-editor-status {
    display: grid;
    grid-template-columns: repeat(2, minmax(max-content, 1fr));
    grid-column-gap: 10px;

    > :not(:first-child) {
        border-left: 1px solid rgba(0, 0, 0, 0.125);
        padding-left: 20px;
    }
}

